Bug 302890 - Problem with markup and ">" character in notification text
Summary: Problem with markup and ">" character in notification text
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: notifications (other bugs)
Version First Reported In: 4.9-git
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-02 11:52 UTC by Yichao Yu
Modified: 2012-08-03 11:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yichao Yu 2012-07-02 11:52:03 UTC
1, notification only support > when there is <
2, there is a problem when "<" and ">" doesn't match in notification text (see steps to reproduce below)


Reproducible: Always

Steps to Reproduce:
1. notify-send - 'a >'
2. notify-send - '&gt; &lt;'
3. notify-send - '&gt;'
Actual Results:  
notify text shown:
1, >
2, > <
3, &gt;

Expected Results:  
1, a >
2, > < (this is correct)
3, >

As a result, at least I cannot find a way to show "a >" at all, neither "a >" nor "a &gt;" works (or there might be a fancier way to show this =D)
Comment 1 Reza 2012-07-10 12:19:07 UTC
I can display properly.
I did like this notify-send '&gt; &lt;' instead of notify-send - '&gt; &lt;' , i removed minus symbol
What is the purpose of '-'?
Comment 2 Yichao Yu 2012-07-10 12:29:08 UTC
The minus symbol is just a random title of the notification. u can replace it with any random string (k I'm lazy and it is a little bit confusing....)
(see `notify-send --help` for detail =D)

Yes, title is fine (consistent). It doesn't support markup and never escape anything, afaik.
The problem is with the body.
Comment 3 Martin Koller 2012-08-03 09:37:20 UTC
confirmed in KDE/4.9
Added a patch as review request: https://git.reviewboard.kde.org/r/105836/
Comment 4 Martin Koller 2012-08-03 11:41:43 UTC
Git commit d057abca241d950df8dd264041e9ad70c8f65528 by Martin Koller.
Committed on 03/08/2012 at 13:37.
Pushed by mkoller into branch 'KDE/4.9'.

fix html tag handling in notification message

M  +6    -3    plasma/generic/applets/notifications/ui/notificationwidget.cpp

http://commits.kde.org/kde-workspace/d057abca241d950df8dd264041e9ad70c8f65528
Comment 5 Martin Koller 2012-08-03 11:46:13 UTC
Git commit fb680824d5e71f898b787d5554ee2a22bd900884 by Martin Koller.
Committed on 03/08/2012 at 13:37.
Pushed by mkoller into branch 'master'.

fix html tag handling in notification message

M  +6    -3    plasma/generic/applets/notifications/ui/notificationwidget.cpp

http://commits.kde.org/kde-workspace/fb680824d5e71f898b787d5554ee2a22bd900884