fix html tag handling in notification message

BUG: 302890